// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Default Header 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderBottomWidth": 2,
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingBottom": 10,
        "paddingHorizontal": 20,
        "paddingTop": 40,
      },
      Object {
        "borderBottomColor": "#21BFAE",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "flex": 1,
          "fontFamily": "orkney-medium",
          "fontSize": 30,
          "paddingTop": 10,
          "textAlign": "center",
        },
        Object {
          "color": "#21BFAE",
        },
      ]
    }
  >
    Test Header
  </Text>
</View>
`;

exports[`Renders Header w/ Custom Color 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderBottomWidth": 2,
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingBottom": 10,
        "paddingHorizontal": 20,
        "paddingTop": 40,
      },
      Object {
        "borderBottomColor": "#8B1E3F",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "flex": 1,
          "fontFamily": "orkney-medium",
          "fontSize": 30,
          "paddingTop": 10,
          "textAlign": "center",
        },
        Object {
          "color": "#8B1E3F",
        },
      ]
    }
  >
    Test Header
  </Text>
</View>
`;
